resolving layout issues for landing page

--- a/pointsLab-codeContents/index.scss
+++ b/pointsLab-codeContents/index.scss
@@ -38,6 +38,7 @@ $primaryYellow: #FFE600;
     padding-top: 5px;
     padding-bottom: 5px;
     background-color: $secondaryTeal;
+    text-decoration: dashed underline;
 }
 
 .topnav {
@@ -81,10 +82,42 @@ $primaryYellow: #FFE600;
         border-radius: 5px;
         padding: 10px;
         box-shadow: 10px, 10px, 2px black; // also seems to be not working, will come back to fix
-        margin: 20px;
+        margin-right: 20px;
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
     a {
         font-family: sans-serif;
         @include textToggle(black, );
     }
+}
+
+.mainLandingContent {
+    display: grid;
+    align-items: center;
+    div{
+        max-width: 600px;
+    }
+        .contentLeft {
+            max-width: 600px;
+            .fourItems {
+                display: grid;
+                grid-template-columns: repeat(4, 1fr);
+                    h3 {
+                        font-size: 20px;
+                        font-family: sans-serif;
+                        font-weight: bold;
+                    }
+                    h4 {
+                        font-size: 11px;
+                        font-family: sans-serif;
+                    }
+                }
+                max-width: 600px;
+            }
+            .contentRight {
+                max-width: 600px;
+            }
+        }
+            
 }
